--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+*, ::before, ::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 :root {
     --Blue: hsl(246, 80%, 60%);
 
@@ -15,7 +21,46 @@
 }
 
 body {
-    background-color: var(--Very-dark-blue)
+    background-color: var(--Very-dark-blue);
+    font-family: Rubik, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile {
+    background-color: var(--Blue);
+}
+
+#profile-pic {
+    border: 0.25rem solid white;
+    border-radius: 9rem;
+    width: 5rem;
+}
+
+#choices-box {
+    background-color: var(--Dark-blue);
+}
+
+.container {
+    width: 10rem;
+}
+
+.text-box {
+    background-color: var(--Dark-blue);
+}
+
+.ellipsis {
+    float: right;
 }
 
 #background-work {
