--- a/styles.css
+++ b/styles.css
@@ -23,22 +23,29 @@
 body {
     background-color: var(--Very-dark-blue);
     font-family: Rubik, sans-serif;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 91.8125rem;
+    padding: 0 1.5rem;
 }
 
 main {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1rem;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1.875rem;
+    max-width: 69.375rem;
+    min-height: 32.375rem;
     justify-content: center;
     align-items: center;
 }
 
-.profile {
+#profile {
     background-color: var(--Blue);
+    grid-row: 1/3;
+    border-radius: 0.7rem;
 }
 
 #profile-pic {
@@ -47,8 +54,19 @@ main {
     width: 5rem;
 }
 
-#choices-box {
+.container-profile {
+    width: 12rem;
+    height: 20rem;
+}
+
+.choices-box {
     background-color: var(--Dark-blue);
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+ul > li {
+    list-style: none;
+    font-size: 1.125rem;
 }
 
 .container {
