--- a/styles.css
+++ b/styles.css
@@ -21,47 +21,49 @@
 }
 
 body {
+    color: white;
     background-color: var(--Very-dark-blue);
     font-family: Rubik, sans-serif;
-    color: white;
+    min-height: 70rem;
     display: flex;
     justify-content: center;
+    justify-items: center;
     align-items: center;
-    min-height: 91.8125rem;
-    padding: 0 1.5rem;
 }
 
 main {
+    position: absolute;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 1.875rem;
-    max-width: 69.375rem;
-    min-height: 32.375rem;
-    justify-content: center;
-    align-items: center;
 }
 
-#profile {
-    background-color: var(--Blue);
+.profile {
     grid-row: 1/3;
-    border-radius: 0.7rem;
+    width: 15.5rem;
 }
 
-#profile-pic {
-    border: 0.25rem solid white;
+.profile-box {
+    position: relative;
+    background-color: var(--Blue);
+    border-radius: 1rem;
+    height: 20.5rem;
+    z-index: 1;
+}
+
+.profile-pic {
+    border: 0.15rem solid white;
     border-radius: 9rem;
     width: 5rem;
 }
 
-.container-profile {
-    width: 12rem;
-    height: 20rem;
-}
-
 .choices-box {
     background-color: var(--Dark-blue);
-    grid-area: 2 / 1 / 3 / 2;
+    height: 11rem;
+    margin-top: -1rem;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
 
 ul > li {
@@ -69,16 +71,16 @@ ul > li {
     font-size: 1.125rem;
 }
 
-.container {
-    width: 10rem;
-}
-
-.text-box {
+.item {
     background-color: var(--Dark-blue);
 }
 
 .ellipsis {
     float: right;
+}
+
+.container {
+    width: 15.5rem;
 }
 
 #background-work {
