--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,8 @@ main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    max-width: 70rem;
+    min-height: 32rem;
     gap: 1.875rem;
 }
 
@@ -48,14 +50,15 @@ main {
     position: relative;
     background-color: var(--Blue);
     border-radius: 1rem;
-    height: 20.5rem;
+    height: 22.1rem;
     z-index: 1;
 }
 
 .profile-pic {
-    border: 0.15rem solid white;
+    border: 0.18rem solid white;
     border-radius: 9rem;
-    width: 5rem;
+    height: 4rem;
+    margin: 0 1.875rem;
 }
 
 .choices-box {
@@ -78,8 +81,9 @@ ul > li {
 .time-box {
     background-color: var(--Dark-blue);
     margin-top: -4.45rem;
-    height: 11.6rem;
+    height: 12.25rem;
     border-radius: 1rem;
+    position: relative;
 }
 
 .ellipsis {
@@ -89,6 +93,13 @@ ul > li {
 .background {
     height: 7.17rem;
     border-radius: 1rem;
+    overflow: hidden;
+}
+
+.background-pic {
+    margin-top: -0.54rem;
+    margin-right: 1.2rem;
+    float: right;
 }
 
 #background-work {
